2007-10-01  Peter Bloomfield

	* libbalsa/message.c: (libbalsa_message_header_get_helper),
	(lb_message_set_headers_from_string): match headers exactly.
	* src/balsa-message.c: (balsa_message_set_displayed_headers):
	check whether this is an actual change.
	* src/main-window.c: connect to "activate" signal instead of
	"changed", to see every click.
	* src/message-window.c: (mw_get_ui_manager), (message_window_new),
	(mw_header_activate_cb), (reset_show_all_headers): ditto.

2007-09-30  Peter Bloomfield

	* src/main-window.c: clean up.

2007-09-30  Peter Bloomfield

	* src/main-window.c: block only some actions.
	* src/message-window.c: (mw_set_active), (message_window_new),
	(reset_show_all_headers): ditto.
	* src/sendmsg-window.c: block no actions--just document it.

2007-09-30  Peter Bloomfield

	* libbalsa/mailbox.c: (lbm_get_index_entry): check for NULL
	message returned by libbalsa_mailbox_get_message().
	* libbalsa/mailbox_local.c: (message_match_real): ditto.
	* libbalsa/send.c: (lbs_process_queue),
	(libbalsa_process_queue): ditto.
	* src/balsa-index.c: (bndx_view_source),
	(balsa_index_selected_list_func): ditto.
	* src/balsa-message.c: (balsa_message_set): ditto.
	* src/main-window.c: ditto.
	* src/message-window.c: (mw_set_selected): ditto;
	(shown_hdrs_radio_cb): fix typo.
	* src/sendmsg-window.c: (attachments_add), (drag_data_quote),
	(sendmsg_window_new_from_list): ditto.

2007-09-29  Peter Bloomfield

	* src/main-window.c: block actions while we set active.

2007-09-29  Peter Bloomfield

	* src/balsa-index.c: (balsa_index_load_mailbox_node): set
	threading in main-window instead of balsa-index.
	* src/main-window.c: ditto.

2007-09-29  Peter Bloomfield

	* src/balsa-index.c: (balsa_index_load_mailbox_node):
	balsa_window_get_view_filter is no longer exported;
	(bndx_do_popup): BalsaIndex::window no longer exists.
	* src/balsa-index.h: remove BalsaIndex::window.
	* src/main-window.c: do not export balsa_window_get_view_filter.