@@ -26,4 +26,6 @@ int get_toolbar_button_index(const char *id);
 
 void customize_dialog_cb(GtkWidget *, gpointer);
 
+#define BALSA_TOOLBAR_MODEL_NAME "balsa-toolbar-model-name"
+
 #endif
